# future-folklore-platform

./: .env.example  .gitattributes  .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  tsconfig.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml
apps/api/: project.json  pyproject.toml  railway.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: health.py
apps/api/app/db/: client.py
apps/api/tests/: test_health.py
apps/web/: jest.config.cts  next.config.js  package.json  tsconfig.json  vercel.json
apps/web/specs/: index.spec.tsx
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(authenticated)/: layout.tsx
apps/web/src/components/auth/: oauth-buttons.tsx
apps/web/src/components/calls/: call-card.tsx  call-filters.tsx  create-call-form.tsx  ics-download-button.tsx  notes-editor.tsx  rsvp-panel.tsx
apps/web/src/components/directory/: directory-filters.tsx
apps/web/src/components/graph/: concept-card.tsx  concept-form.tsx  edge-creator-modal.tsx  edge-delete-button.tsx  generate-edges-button.tsx  graph-controls.tsx  graph-sidebar.tsx  knowledge-graph.tsx
apps/web/src/components/investor/: investor-filters.tsx  investor-project-card.tsx
apps/web/src/components/layout/: app-shell.tsx  page-container.tsx  sidebar.tsx  top-nav.tsx
apps/web/src/components/profile/: profile-card.tsx  profile-edit-form.tsx
apps/web/src/components/ui/: avatar.tsx  (+9 more)
apps/web/src/hooks/: use-toast.ts
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml
(+70 files in other folders)
